--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -39,6 +39,10 @@ RUN /root/.pyenv/shims/pip install wheel
 RUN yum install -y http://packages.groonga.org/centos/groonga-release-1.1.0-1.noarch.rpm
 RUN yum install -y mysql57-community-mroonga mysql-devel
 
+# install redis
+RUN yum -y install epel-release; yum clean all
+RUN yum -y install redis; yum clean all
+
 # ansibleのため/usr/bin/pythonにsymbolic linkをはる(ansibleはlocal, remoteの/ust/bin/pythonを見るため)
 RUN mv /usr/bin/python /usr/bin/python_bak
 RUN ln -s /root/.pyenv/versions/2.7.9/bin/python /usr/bin/python
@@ -48,4 +52,4 @@ RUN rm -rf /var/lib/mysql && mkdir -p /var/lib/mysql /var/run/mysqld \
 # ensure that /var/run/mysqld (used for socket and lock files) is writable regardless of the UID our mysqld instance ends up having at runtime
 	&& chmod 777 /var/run/mysqld
 RUN mysqld --user=mysql --initialize-insecure --datadir="/var/lib/mysql"
-ENTRYPOINT /etc/init.d/mysqld start && mysql -uroot -e "INSTALL PLUGIN mroonga SONAME 'ha_mroonga.so';" && /bin/bash
+ENTRYPOINT echo "daemonize yes" > redis.conf && redis-server redis.conf && /etc/init.d/mysqld start && mysql -uroot -e "INSTALL PLUGIN mroonga SONAME 'ha_mroonga.so';" && /bin/bash
