--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -1,5 +1,5 @@
 # from docker hub
-FROM centos:centos6
+FROM centos:centos7.1.1503
 
 MAINTAINER Urasin <urasin2012@gmail.com>
 
@@ -7,7 +7,9 @@ MAINTAINER Urasin <urasin2012@gmail.com>
 RUN yum install -y git htop wget curl libxml2-devel libxslt-devel tar patch gcc gcc-c++ yum-utils libffi-devel
 
 # install mysql
-RUN yum install -y http://repo.mysql.com/mysql-community-release-el6-7.noarch.rpm state=present
+RUN yum install -y http://repo.mysql.com/mysql-community-release-el7-7.noarch.rpm state=present
+RUN rpm --rebuilddb;yum install -y yum-plugin-ovl
+RUN yum swap -y fakesystemd systemd
 RUN yum update -y
 RUN yum-config-manager --disable mysql56-community
 RUN yum-config-manager --enable mysql57-community
@@ -21,7 +23,7 @@ RUN echo 'eval "$(pyenv init -)"' >> /root/.bashrc
 RUN source ~/.bashrc
 
 # install python 2.7.9
-RUN yum install -y zlib-devel bzip2 bzip2-devel readline-devel sqlite-devel openssl-devel libjpeg-devel libselinux-python
+RUN yum install -y make zlib-devel bzip2 bzip2-devel readline-devel sqlite-devel openssl-devel libjpeg-devel libselinux-python
 RUN /root/.pyenv/bin/pyenv install 2.7.9
 
 # install ansible
@@ -29,14 +31,14 @@ RUN /root/.pyenv/versions/2.7.9/bin/pip install ansible
 RUN /root/.pyenv/bin/pyenv rehash
 
 # install python 3.5.2
-RUN /root/.pyenv/bin/pyenv install 3.5.2
-RUN /root/.pyenv/bin/pyenv global 3.5.2
+RUN /root/.pyenv/bin/pyenv install 3.6.1
+RUN /root/.pyenv/bin/pyenv global 3.6.1
 RUN /root/.pyenv/bin/pyenv rehash
 RUN /root/.pyenv/shims/pip install --upgrade pip
 RUN /root/.pyenv/shims/pip install wheel
 
 # install Groonga
-RUN yum install -y http://packages.groonga.org/centos/groonga-release-1.1.0-1.noarch.rpm
+RUN yum install -y http://packages.groonga.org/centos/groonga-release-1.3.0-1.noarch.rpm
 RUN yum install -y mysql57-community-mroonga mysql-devel
 
 # install redis
@@ -52,4 +54,4 @@ RUN rm -rf /var/lib/mysql && mkdir -p /var/lib/mysql /var/run/mysqld \
 # ensure that /var/run/mysqld (used for socket and lock files) is writable regardless of the UID our mysqld instance ends up having at runtime
 	&& chmod 777 /var/run/mysqld
 RUN mysqld --user=mysql --initialize-insecure --datadir="/var/lib/mysql"
-ENTRYPOINT echo "daemonize yes" > redis.conf && redis-server redis.conf && /etc/init.d/mysqld start && mysql -uroot -e "INSTALL PLUGIN mroonga SONAME 'ha_mroonga.so';" && /bin/bash
+ENTRYPOINT echo "daemonize yes" > redis.conf && redis-server redis.conf && /usr/sbin/mysqld --daemonize --user=mysql && mysql -uroot -e "INSTALL PLUGIN mroonga SONAME 'ha_mroonga.so';" && /bin/bash
